--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: hospital-mgmt-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: chmod +x build.sh && ./build.sh
     startCommand: gunicorn hospital_mgmt.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DJANGO_SETTINGS_MODULE
@@ -13,15 +13,14 @@ services:
         fromDatabase:
           name: hospital-mgmt-db
           property: connectionString
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: hospital-mgmt-redis
-          property: connectionString
       - key: DJANGO_ALLOWED_HOSTS
-        value: hospital-mgmt-api.onrender.com
-      - key: CORS_ALLOWED_ORIGINS
-        value: https://hospital-mgmt-api.onrender.com
+        value: .onrender.com
+      - key: CORS_ALLOW_ALL_ORIGINS
+        value: "1"
+      - key: PATIENT_SELF_SIGNUP_ENABLED
+        value: "1"
+      - key: PYTHON_VERSION
+        value: "3.11.11"
 
 databases:
   - name: hospital-mgmt-db
