--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.28.0
 psycopg==3.2.5
+psycopg2-binary==2.9.10
 gunicorn==23.0.0
 whitenoise==6.8.2
 django-redis==5.4.0
