--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,19 @@
 services:
   - type: web
-    name: hospital-mgmt-api
+    name: hospital-management-system
     env: python
-    buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: gunicorn hospital_mgmt.wsgi:application --bind 0.0.0.0:$PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: chmod +x start.sh && ./start.sh
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: config.prod
       - key: DJANGO_SECRET_KEY
         generateValue: true
-      - key: DATABASE_URL
-        fromDatabase:
-          name: hospital-mgmt-db
-          property: connectionString
       - key: DJANGO_ALLOWED_HOSTS
-        value: .onrender.com
+        value: "*"
       - key: CORS_ALLOW_ALL_ORIGINS
+        value: "1"
+      - key: DJANGO_DEBUG
         value: "1"
       - key: PATIENT_SELF_SIGNUP_ENABLED
         value: "1"
-      - key: PYTHON_VERSION
-        value: "3.11.11"
-
-databases:
-  - name: hospital-mgmt-db
-    plan: free
